# img-with-box-from-excel

./: .gitignore  LICENSE  README.md  img-with-box-from-excel.py  pyproject.toml  requirements.txt
src/: start_project.py
src/boxcel/: display_images.py  gui.py  start_project.py
