[build-system]
requires = [
    "hatchling",
    "pandas>=1.1.3",
    "Pillow>=9.2.0",
    "xlwings>=0.28.3",
    "openpyxl>=3.0.10"
]
build-backend = "hatchling.build"

[project]
name = "boxcel"
version = "0.0.1"
authors = [
  { name="Valentin Ștefan", email="" },
]
description = "Integrate Excel with Python for visualizing images with their corresponding bounding boxes for object detection annotation workflows"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "pandas>=1.1.3",
    "Pillow>=9.2.0",
    "xlwings>=0.28.3",
    "openpyxl>=3.0.10",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/valentinitnelav/img-with-box-from-excel"
"Bug Tracker" = "https://github.com/valentinitnelav/img-with-box-from-excel/issues"